# kcm-userconfig

./: CMakeLists.txt  Messages.sh  README  TODO  group.py  group_dialogs.py  models.py  user.py  user_dialogs.py  userconfig.desktop  userconfig.py
authdb/: context.py  ldap.py  pwd.py  util.py
doc/userconfig/: index.docbook
helper/: helper.cpp  helper.h  userconfig.actions
ui/: deleteuser.ui  deleteuserdialog.ui  groups.ui  maindialog.ui  overwritehomedirectory.ui  userproperties-details.ui  userproperties-privgroups.ui  userproperties-pwsec.ui  userproperties.ui  users.ui
util/: groups.py  unixauthdb.py
